--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@vitest/coverage-v8": "^1.4.0",
     "@vitest/ui": "^1.4.0",
     "jsdom": "^24.0.0",
+    "prettier": "3.2.5",
     "vite": "^5.2.3",
     "vitest": "^1.4.0"
   }
